# arab-bank-refactor

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  main.py  pyproject.toml
app/: main.py
app/agent/: abstract_agent.py  agent_factory.py  base_agent.py  clients.py  interface.py  object_facotry.py  service.py
app/agent/assist/: __init__.py  assist.py  prompt.py  tools.py
app/agent/it_assist/: ITAssist.py  __init__.py  prompt.py  tools.py
app/agent/murshid/: __init__.py  murshid.py  prompt.py  tools.py
app/api/: __init__.py  api.py
app/api/routers/: chat.py
app/core/: __init__.py  config.py
app/db/: __init__.py  db.py
app/schemas/: chat_response.py
app/utils/: perf.py
docs/: schema.dbml
