[project]
name = "arab-bank-rewrite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev= [
    "langchain>=0.3.26",
    "fastapi>=0.115.13",
    "uvicorn>=0.34.3",
    "langgraph[postgres]>=0.4.9",
    "langfuse[openai]>=3.0.5",
    "asyncpg>=0.30.0",
    "langgraph-checkpoint-postgres>=2.0.21",
    "pydantic[settings]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pinecone[asyncio]>=7.2.0",
    "langchain-community>=0.3.26",
    "pre-commit>=4.2.0",
    "detect-secrets>=1.5.0",
    "langchain-openai>=0.3.25",
    "langgraph-prebuilt>=0.2.2",
]
